shadows-highlights: Passthrough when properties evaluate to NOP

https://bugzilla.gnome.org/show_bug.cgi?id=789554